unpackaged/main/default/objects/ServiceContract/fields/AAA_ACA_Check_Digit__c.field-meta.xml
<CustomField>
    <fullName>AAA_ACA_Check_Digit__c</fullName>
    <description>In the 16-Digit membership ID, ISO is the first 3, Club Code is the next 3 digits, Member ID (Household Membership ID) is the next 7 digits, Assoc Member Id is the next 2 digits and Check Digit is the last digit
Example: If the 16-Digit membership ID= 4382121353733023, then the Check Digit = 3</description>
    <inlineHelpText>In the 16-Digit membership ID, ISO is the first 3, Club Code is the next 3 digits, Member ID (Household Membership ID) is the next 7 digits, Assoc Member Id is the next 2 digits and Check Digit is the last digit
Example: If the 16-Digit membership ID= 4382121353733023, then the Check Digit = 3</inlineHelpText>
    <label>Check Digit</label>
    <length>1</length>
    <type>Text</type>
</CustomField>