unpackaged/main/default/objects/ServiceContract/fields/AAA_ACA_Club_Code__c.field-meta.xml
<CustomField>
    <fullName>AAA_ACA_Club_Code__c</fullName>
    <description>In the 16-Digit membership ID, ISO is the first 3, Club Code is the next 3 digits, Member ID (Household Membership ID) is the next 7 digits, Assoc Member Id is the next 2 digits and Check Digit is the last digit
Example: If the 16-Digit membership ID= 4382121353733023, then the Club Code=212.</description>
    <inlineHelpText>In the 16-Digit membership ID, ISO is the first 3, Club Code is the next 3 digits, Member ID (Household Membership ID) is the next 7 digits, Assoc Member Id is the next 2 digits and Check Digit is the last digit
Example: If the 16-Digit membership ID= 4382121353733023, then the Club Code=212.</inlineHelpText>
    <label>Club Code</label>
    <length>3</length>
    <type>Text</type>
</CustomField>