unpackaged/main/default/objects/ServiceContract/fields/AAA_ACA_Member_Status__c.field-meta.xml
<CustomField>
    <fullName>AAA_ACA_Member_Status__c</fullName>
    <description>Maps the incoming value of memberStatus as per JSOn from D3 i.e. &quot;memberStatus&quot;: &quot;A&quot;</description>
    <inlineHelpText>Maps the incoming value of memberStatus as per JSOn from D3 i.e. &quot;memberStatus&quot;: &quot;A&quot;</inlineHelpText>
    <label>Member Status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>