unpackaged/main/default/objects/ServiceContract/fields/AAA_ACA_Membership_Coverage_Level__c.field-meta.xml
<CustomField>
    <fullName>AAA_ACA_Membership_Coverage_Level__c</fullName>
    <description>Maps the coverage level as per incoming request from D3</description>
    <inlineHelpText>Maps the coverage level as per incoming request from D3</inlineHelpText>
    <label>Membership Coverage Level</label>
    <length>32</length>
    <type>Text</type>
</CustomField>