unpackaged/main/default/objects/ServiceContract/fields/AAA_ACA_Membership_Type__c.field-meta.xml
<CustomField>
    <fullName>AAA_ACA_Membership_Type__c</fullName>
    <description>Represent the Membership Type i.e. Member for household Membership. Primary and Associate membership is decided by the 14-15 Digits in the 16 Digit Membership ID being 00 or Non 00 values. RAP comes as the value in the incoming request for RAP requests.</description>
    <inlineHelpText>Represent the Membership Type i.e. Member for household Membership. Primary and Associate membership is decided by the 14-15 Digits in the 16 Digit Membership ID being 00 or Non 00 values. RAP comes as the value in the incoming request for RAP requests.</inlineHelpText>
    <label>Membership Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Associate</fullName>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>RAP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>