unpackaged/main/default/objects/ServiceContract/fields/AAA_ACA_RAP_ID__c.field-meta.xml
<CustomField>
    <fullName>AAA_ACA_RAP_ID__c</fullName>
    <description>ID as per incoming RAP Request</description>
    <inlineHelpText>ID as per incoming RAP Request</inlineHelpText>
    <label>RAP ID</label>
    <length>16</length>
    <type>Text</type>
</CustomField>