unpackaged/main/default/objects/ServiceContract/fields/AAA_ACA_RAP_Program__c.field-meta.xml
<CustomField>
    <fullName>AAA_ACA_RAP_Program__c</fullName>
    <description>Value of the RAP Program as per incoming RAP Request</description>
    <inlineHelpText>Value of the RAP Program as per incoming RAP Request</inlineHelpText>
    <label>RAP Program</label>
    <length>16</length>
    <type>Text</type>
</CustomField>