unpackaged/main/default/objects/ServiceContract/fields/AAA_ACA_Role__c.field-meta.xml
<CustomField>
    <fullName>AAA_ACA_Role__c</fullName>
    <description>Value of the RAP Role as per incoming RAP Request</description>
    <inlineHelpText>Value of the RAP Role as per incoming RAP Request</inlineHelpText>
    <label>Role</label>
    <length>16</length>
    <type>Text</type>
</CustomField>