unpackaged/main/default/objects/ServiceContract/fields/AAA_Battery_Consumed__c.field-meta.xml
<CustomField>
    <fullName>AAA_Battery_Consumed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Battery Consumed</label>
    <type>Checkbox</type>
</CustomField>