unpackaged/main/default/objects/ServiceContract/fields/AAA_Home_Lockout_Consumed__c.field-meta.xml
<CustomField>
    <fullName>AAA_Home_Lockout_Consumed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Home Lockout Consumed</label>
    <type>Checkbox</type>
</CustomField>