unpackaged/main/default/objects/ServiceContract/fields/AAA_Long_Tow_Allowed__c.field-meta.xml
<CustomField>
    <fullName>AAA_Long_Tow_Allowed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field that specified whether the household has Long Tow Allowed Feature</description>
    <inlineHelpText>Field that specified whether the household has Long Tow Allowed Feature</inlineHelpText>
    <label>Long Tow Allowed</label>
    <type>Checkbox</type>
</CustomField>