unpackaged/main/default/objects/ServiceContract/fields/AAA_Long_Tow_Consumed__c.field-meta.xml
<CustomField>
    <fullName>AAA_Long_Tow_Consumed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Long Tow Consumed</label>
    <type>Checkbox</type>
</CustomField>