unpackaged/main/default/objects/ServiceContract/fields/AAA_Long_Tow_Miles__c.field-meta.xml
<CustomField>
    <fullName>AAA_Long_Tow_Miles__c</fullName>
    <label>Long Tow Miles</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>