unpackaged/main/default/objects/ServiceContract/fields/AAA_Primary_End_Date__c.field-meta.xml
<CustomField>
    <fullName>AAA_Primary_End_Date__c</fullName>
    <label>Primary End Date</label>
    <type>Date</type>
</CustomField>