unpackaged/main/default/objects/ServiceContract/fields/AAA_Primary_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>AAA_Primary_Start_Date__c</fullName>
    <label>Primary Start Date</label>
    <type>Date</type>
</CustomField>