unpackaged/main/default/objects/ServiceContract/fields/AAA_Same_Day_Service__c.field-meta.xml
<CustomField>
    <fullName>AAA_Same_Day_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Same Day Service</label>
    <type>Checkbox</type>
</CustomField>