unpackaged/main/default/objects/ServiceContract/fields/AAA_Total_of_Calls_Allowed__c.field-meta.xml
<CustomField>
    <fullName>AAA_Total_of_Calls_Allowed__c</fullName>
    <defaultValue>4</defaultValue>
    <description>Field to store the allowed number of calls each member is entitled to</description>
    <inlineHelpText>The number of Service Calls the member is entitled to during the Service Contract period.</inlineHelpText>
    <label>Total # of Calls Allowed</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>