unpackaged/main/default/objects/ServiceContract/fields/AAA_Total_of_Calls_Consumed__c.field-meta.xml
<CustomField>
    <fullName>AAA_Total_of_Calls_Consumed__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Field that gets incremented when a WO or Reimbursement is cleared and Charge Entitlement checkbox is set to True</description>
    <inlineHelpText>The number of Service Calls the member has consumed in AAA Northeast territory (Work Orders and/or Reimbursements) where the “Charge Entitlement” checkbox is checked.</inlineHelpText>
    <label>Total # of Calls Consumed</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>