unpackaged/main/default/objects/ServiceContract/fields/AAA_Total_of_Calls_Remaining__c.field-meta.xml
<CustomField>
    <fullName>AAA_Total_of_Calls_Remaining__c</fullName>
    <description>Formula that displays the Current number of calls remaining for the member to consume</description>
    <formula>If( (AAA_Total_of_Calls_Allowed__c -  (AAA_Total_of_Calls_Consumed__c +  AAA_Total_of_Reciprocals__c)) &gt;=  0 , (AAA_Total_of_Calls_Allowed__c -  (AAA_Total_of_Calls_Consumed__c +  AAA_Total_of_Reciprocals__c)), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of Service Calls the member has left to consume: calculated as Total # Calls Allowed – (Total # Calls Consumed + Total # Reciprocals)</inlineHelpText>
    <label>Total # of Calls Remaining</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>