unpackaged/main/default/objects/ServiceContract/fields/AAA_Total_of_Reciprocals__c.field-meta.xml
<CustomField>
    <fullName>AAA_Total_of_Reciprocals__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Field that gets incremented when the member is serviced outside of the club and a Reciprocal is received</description>
    <inlineHelpText>The number of Service Calls that the member has consumed outside AAA Northeast territory (Reciprocals and/or Feedbacks) where the “Charge Entitlement” checkbox is checked.</inlineHelpText>
    <label>Total # of Reciprocals</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>