unpackaged/main/default/objects/ServiceContract/fields/Cancellation_Date__c.field-meta.xml
<CustomField>
    <fullName>Cancellation_Date__c</fullName>
    <inlineHelpText>Field that gets populated when the Contract is set to Cancelled</inlineHelpText>
    <label>Cancellation Date</label>
    <type>Date</type>
</CustomField>