unpackaged/main/default/objects/ServiceContract/fields/Long_Tow_Consumed_Parent__c.field-meta.xml
<CustomField>
    <fullName>Long_Tow_Consumed_Parent__c</fullName>
    <formula>ParentServiceContract.AAA_Long_Tow_Consumed__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Long Tow Consumed</label>
    <type>Checkbox</type>
</CustomField>