unpackaged/main/default/objects/ServiceContract/fields/Membership_Number_15_Digits__c.field-meta.xml
<CustomField>
    <fullName>Membership_Number_15_Digits__c</fullName>
    <formula>LEFT( AAA_ACA_Membership16ID__c , 15)</formula>
    <label>Membership Number(15 Digits)</label>
    <type>Text</type>
</CustomField>