unpackaged/main/default/objects/ServiceContract/fields/Premier_Battery_Entitled__c.field-meta.xml
<CustomField>
    <fullName>Premier_Battery_Entitled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Premier Battery Entitled</label>
    <type>Checkbox</type>
</CustomField>