unpackaged/main/default/objects/ServiceContract/recordTypes/Member.recordType-meta.xml
<RecordType>
    <fullName>Member</fullName>
    <active>true</active>
    <label>Member</label>
</RecordType>